--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-dist*
-*.hi
+dist
+cabal-dev
+cache
 *.o
-.hsenv*
-.cabal-sandbox
+*.hi
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
 cabal.sandbox.config
-.DS_Store
-*.swp
+*.prof
+*.aux
+*.hp
